# ha-outback-mate3

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  LICENSE  README.md  SECURITY.md  TASKS.md  hacs.json  manifest.json  pyproject.toml  repository.yaml  requirements_test.txt  sensor.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml  feature.yaml
.github/workflows/: builder.yaml  lint.yaml  release.yaml  test.yaml  validate.yaml
archive/: TASKS-2.0.0.md
custom_components/outback_mate3/: __init__.py  binary_sensor.py  config_flow.py  const.py  diagnostics.py  manifest.json  sensor.py  sensor_config.py  strings.json
custom_components/outback_mate3/translations/: en.json
docs/: architecture.md  config-xml-coverage.md  faq.md  troubleshooting.md
docs/superpowers/specs/: 2026-04-17-ha-addon-design.md
outback_mate3_addon/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  config.yaml  run.sh
outback_mate3_addon/bundled_integration/outback_mate3/: __init__.py  binary_sensor.py  config_flow.py  const.py  manifest.json  quality_scale.yaml  sensor.py  strings.json
outback_mate3_addon/bundled_integration/outback_mate3/translations/: en.json
outback_mate3_addon/src/: config_poller.py  discovery.py  main.py  mate3_http.py  parser.py  state.py  udp_listener.py  ws_server.py
outback_mate3_addon/tests/: conftest.py  test_mate3_http.py  test_parser.py  test_state.py  test_udp_listener.py  test_ws_server.py
outback_mate3_addon/tests/fixtures/: config.xml
outback_mate3_addon/translations/: en.yaml
scripts/: bump-dev-version.sh  install-addon.sh  install-integration.sh  onboard-haos.sh  provision-haos-vm.sh  sync-bundled-integration.sh  teardown-haos-vm.sh
tests/: conftest.py  test_integration.py
tests/__snapshots__/: test_integration.ambr
tests/fixtures/mate3_frames/: README.md  all_frames.jsonl  mate3_capture.pcap
translations/: en.json
