[project]
name = "ha-outback-mate3"
version = "2.0.0"
description = "Home Assistant add-on + integration for the Outback Power MATE3 system controller."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

[tool.ruff]
# Both source trees use the same rules; the add-on ships its own `src/` layout.
target-version = "py312"
line-length = 100
src = [
    "custom_components",
    "outback_mate3_addon/src",
    "tests",
    "outback_mate3_addon/tests",
]
# Generated synced copy of the integration — lint it at the source tree only.
extend-exclude = [
    "outback_mate3_addon/bundled_integration",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ASYNC",  # flake8-async
    "RUF",  # ruff-specific
]
ignore = [
    "E501",     # line-too-long handled by formatter
    "B008",     # function-call-in-default-argument — common in HA schema defaults
    "SIM108",   # ternary-vs-if — not always more readable
    "ASYNC109", # async-function-with-timeout — explicit timeout params are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "B017"]
"outback_mate3_addon/tests/**" = ["B011", "B017"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
